[package]
name = "pallet-utxo"
version = "0.1.0"
authors = ["BCarlaYap <2826165+BCarlaYap@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
log = "0.4.8"
serde = '1.0.119'

# Substrate dependencies
frame-benchmarking = { optional = true, version = '3.0.0'}
frame-support = { version = '3.0.0' }
frame-system = '3.0.0'
sp-runtime = '3.0.0'
sp-io = '3.0.0'
sp-core = '3.0.0'
sp-std = { version = '3.0.0'}
primitive-types = { version ='0.9.0' }
