[package]
name = "pallet-utxo"
version = "0.1.0"
authors = ["BCarlaYap <2826165+BCarlaYap@users.noreply.github.com>"]
edition = "2018"

[features]
runtime-benchmarks = ["frame-benchmarking"]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
]


[dependencies]
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
log = "0.4.8"
serde = '1.0.119'

# Substrate dependencies
frame-benchmarking = {version = '3.0.0', optional = true}
frame-support = '3.0.0'
frame-system = '3.0.0'
sp-runtime = '3.0.0'
sp-io = '3.0.0'
sp-core = '3.0.0'
sp-std = { version = '3.0.0'}
primitive-types = { version ='0.9.0' }

[dev-dependencies]
hex-literal = "0.2.1"
sp-consensus-aura = "0.9.0"
sp-keystore = { version = "0.9.0" }
pallet-aura = { version = '3.0.0' }
pallet-timestamp = { version = "3.0.0" }
