[package]
name = "pallet-utxo"
version = "0.1.0"
authors = ["BCarlaYap <2826165+BCarlaYap@users.noreply.github.com>"]
edition = "2018"

[features]
runtime-benchmarks = ["frame-benchmarking"]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'pallet-timestamp/std',
    'pallet-aura/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-keystore/std'
]


[dependencies]
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
log = "0.4.8"
serde = '1.0.119'

# Substrate dependencies
frame-benchmarking = { default-features = false, version = '3.1.0', optional = true, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-support = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-system = { default-features = false, version ='3.0.0' ,git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
sp-core = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}

[dev-dependencies]
hex-literal = "0.2.1"
sp-consensus-aura = { default-features = false, version = "0.9.0",  git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
sp-keystore = { default-features = false,  version = "0.9.0",  git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
pallet-aura = { default-features = false, version = '3.0.0',  git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
pallet-timestamp = { default-features = false, version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
